--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /wp-content/languages
 /wp-content/plugins/index.php
 /wp-content/themes/index.php
-index.php
+/index.php
 license.txt
 readme.html
 wp-activate.php
