--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "symfony/mailer": "^7.3",
     "twig/intl-extra": "^v3.8.0",
     "twig/string-extra": "^v3.8.0",
-    "twig/twig": "^v3.8.0"
+    "twig/twig": "^v3.8.0",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
